--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -2400,7 +2400,7 @@ footer {
 }
 .insulation-card__hover-overlay {
   position: absolute;
-  top: 84px;
+  top: 130px;
   opacity: 0;
   visibility: hidden;
   transition: all 0.3s ease;
